Bug 1703518 - Cancel any drag tracking before opening native context menus. r=smaug

When opening a native context menu with ctrl+click, the mousedown initiates drag
tracking. Then the menu opens. Native menus consume all mouse events, including
the upcoming mouseup event. This means that Gecko never sees the mouseup event
for the ctrl+click, so drag tracking stays active. Once the menu closes, the
next mouse event can be a long distance away from the ctrl+click's mousedown
position, so Gecko may initiate an unintended drag.

So we manually cancel drag tracking before opening the menu.

Differential Revision: https://phabricator.services.mozilla.com/D114795