dom/events/EventStateManager.h
@@ -364,6 +364,11 @@ class EventStateManager : public nsSupportsWeakReference, public nsIObserver {
   static void ConsumeInteractionData(
       dom::Record<nsString, dom::InteractionData>& aInteractions);
 
+  // Stop tracking a possible drag. If aClearInChildProcesses is true, send
+  // a notification to any child processes that are in the drag service that
+  // tried to start a drag.
+  void StopTrackingDragGesture(bool aClearInChildProcesses);
+
  protected:
   /*
    * If aTargetFrame's widget has a cached cursor value, resets the cursor
@@ -980,11 +985,6 @@ class EventStateManager : public nsSupportsWeakReference, public nsIObserver {
   friend class mozilla::dom::BrowserParent;
   void BeginTrackingRemoteDragGesture(nsIContent* aContent,
                                       dom::RemoteDragStartData* aDragStartData);
-
-  // Stop tracking a possible drag. If aClearInChildProcesses is true, send
-  // a notification to any child processes that are in the drag service that
-  // tried to start a drag.
-  void StopTrackingDragGesture(bool aClearInChildProcesses);
 
   MOZ_CAN_RUN_SCRIPT
   void GenerateDragGesture(nsPresContext* aPresContext,
